--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,15 @@ body {
   cursor: pointer;
   position: relative;
   box-shadow: 0 2px 25px rgba(255,0,130,0.5);
-
+  transition: box-shadow 0.25s;
 }
+.btn:active{
+  background:#d80972;
+  box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
+}
+
+  
+ 
+  
   
   
