--- a/styles.css
+++ b/styles.css
@@ -135,11 +135,12 @@ body {
   border: none;
   outline: none;
   cursor: pointer;
-  position: relative;
+  position: absolute;
+  left: 596px;
+  top: 988px;
   box-shadow: 0 2px 25px rgba(255,0,130,0.5);
   transition: box-shadow 0.25s;
-  left: 317px;
-  top: 585px;
+
 }
 .btn:active{
   background:#d80972;
