--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,13 @@ body {
     }
   }
 }
-
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
   
  
   
