--- a/styles.css
+++ b/styles.css
@@ -173,9 +173,8 @@ body {
 .vertical-center {
   margin: 0;
   position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  left: 317px;
+  top: 585px;
 }
   
  
