--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,9 @@ body {
 .vertical-center {
   margin: 0;
   position: absolute;
-  left: 317px;
-  top: 685px;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
   
  
