--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ body {
 }
 
 .brk-btn {
+  position:relative;
   background: none;
   color: aqua;
   text-transform: uppercase;
@@ -167,6 +168,7 @@ body {
     }
   }
 }
+
 .vertical-center {
   margin: 0;
   position: absolute;
