--- a/styles.css
+++ b/styles.css
@@ -173,8 +173,7 @@ body {
   margin: 0;
   position: absolute;
   top: 385px;
-  -ms-transform: translateY(-30%);
-  transform: translateY(-30%);
+  left: 317px
 }
   
  
