--- a/styles.css
+++ b/styles.css
@@ -168,21 +168,60 @@ body {
     }
   }
 }
-nav{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: start;
-    position: fixed;
-    width: 270px;
-    height: 100%;
-    min-height: 350px;
-    color: white;
-    background: rgba(0, 0, 0, 0.801);
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 10px;
-    transition: ease-in 0.3s;
-    z-index: 100;
-}
-
+ *{
+        margin: 0;
+        padding: 0;
+        }
+        body{
+        background-color: rgb(22, 14, 53);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        }
+        button{
+        position:relative;
+        top:635px;
+        left:317px;
+        color:rgb(75, 243, 243);
+        font-size: 15px;
+        font-weight: bold;
+        text-transform: uppercase;
+        text-shadow: 0 0 0.5em rgb(110, 237, 237);
+        background-color: rgb(44, 157, 157);
+        padding: 1em 3em;
+        border: 0.25em solid rgb(110,237, 237);
+        border-radius: 1em;
+        box-shadow: 0 0 1em 0.25em rgb(110, 237, 237),
+        0 0 4em 1em rgba(65, 243, 243, 0.781),
+        inset 0 0 0.75em 0.25em rgb(110, 237, 237);
+        outline: none;
+        cursor: pointer;
+        transition: all 0.3s;
+        }
+        button::after{
+        content: "";
+        position: absolute;
+        top: 120%;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(65,243, 243, 0.781);
+        filter: blur(2em);
+        opacity: 0.7;
+        pointer-events: none;
+        transform: perspective(1.5em)
+        rotateX(35deg)
+        scale(1, 0.6);
+        }
+        button:hover{
+        color:rgb(44, 157, 157);
+        background-color: rgb(110, 237, 237);
+       box-shadow: 0 0 1em 0.25em
+        rgb(110, 237, 237),
+        0 0 4em 1em
+         rgba(65, 243, 243, 0.781),
+        inset 0 0 0.75em 0.25em
+       rgb(110, 237, 237);
+       }
 
