--- a/styles.css
+++ b/styles.css
@@ -127,8 +127,8 @@ body {
 
 .brk-btn {
   position:relative;
-  top:685px;
-  left:317px;
+  top:317px;
+  left:685pxpx;
   background: none;
   color: aqua;
   text-transform: uppercase;
